--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="../src//Images/letter-a.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -21,6 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <title>Ahmed Algrgawy</title>
 </head>
 
